<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ploggy</string>
    <string name="default_foreground_service_notification_message">Ploggy is running</string>
    <string name="action_generate_self">Your Identity</string>
    <string name="action_self_location_details">Your Location</string>
    <string name="action_add_friend">Add Friend</string>
    <string name="action_settings">Settings</string>
    <string name="title_friend_list_fragment">Friends</string>
    <string name="title_log_fragment">Log</string>
    <string name="label_generate_self_title">Your Identity</string>
    <string name="label_generate_self_description">Your identity for secure sharing</string>
    <string name="label_generate_self_nickname">Nickname:</string>
    <string name="label_generate_self_fingerprint">Fingerprint:</string>
    <string name="button_generate_self_edit">Edit</string>
    <string name="button_generate_self_save">Save</string>
    <string name="prompt_generate_self_progress">Generating key material...</string>
    <string name="label_add_friend_title">Add Friend</string>
    <string name="label_add_friend_description">Touch devices to exchange identities and start sharing</string>
    <string name="label_add_friend_self_section">Your Identity</string>
    <string name="label_add_friend_self_fingerprint">Fingerprint:</string>
    <string name="label_add_friend_friend_section">Friend</string>
    <string name="label_add_friend_friend_fingerprint">Fingerprint:</string>
    <string name="button_add_friend_add">Add</string>
    <string name="prompt_nfc_not_available">NFC is not available</string>
    <string name="prompt_nfc_not_enabled">NFC is not enabled</string>
    <string name="prompt_nfc_push_complete_without_friend_received">Identity beamed to friend. Repeat to receive identity from friend.</string>
    <string name="prompt_nfc_push_complete_and_friend_received">Identity beamed to friend. Click Add to remember friend.</string>
    <string name="prompt_nfc_friend_received_without_push_complete">Identity received from friend. Repeat to beam your identity.</string>
    <string name="prompt_nfc_friend_received_and_push_complete">Identity received from friend. Click Add to remember friend.</string>
    <string name="label_location_details_title">Location Details</string>
    <string name="label_location_details_description">(description)</string>
    <string name="label_location_details_nickname">Nickname:</string>
    <string name="label_location_details_fingerprint">Fingerprint:</string>
    <string name="label_location_details_street_address">Street address:</string>
    <string name="label_location_details_distance">Approximate distance from your location:</string>
    <string name="label_location_details_coordinates">Coordinates:</string>
    <string name="label_location_details_precision">Location precision:</string>
    <string name="label_location_details_last_received_timestamp">Last location update received from friend:</string>
    <string name="label_location_details_last_sent_timestamp">Last location update sent to friend:</string>
    <string name="button_location_details_delete_friend">Delete Friend</string>
    <string name="label_location_details_delete_friend_title">Delete Friend</string>
    <string name="label_location_details_delete_friend_message">Are you sure you want to delete this friend?</string>
    <string name="label_location_details_delete_friend_positive">Delete</string>
    <string name="label_location_details_delete_friend_negative">Cancel</string>
    <string name="format_location_details_distance">%1$d meters</string>
    <string name="format_location_details_coordinates">%1$.4f°, %2$.4f°</string>
    <string name="format_location_details_precision">%1$d meters</string>
    <string name="prompt_location_details_data_not_found">Location details not found</string>
    <string name="preference_privacy_title">Privacy</string>
    <string name="preference_use_geocoder_title">Use Geocoder</string>
    <string name="preference_use_geocoder_summary">Use 3rd party service to map current longitude/latitude to street address</string>
    <string name="preference_limit_location_precision_title">Limit Location Precision</string>
    <string name="preference_limit_location_precision_summary">Reduce the precision of shared location</string>
    <string name="preference_location_precision_title">Location Precision</string>
    <string name="preference_location_precision_summary">Radius of shared location</string>
    <string name="preference_location_precision_units">meters</string>
    <string name="preference_automatic_location_sharing_title">Automatic Location Sharing</string>
    <string name="preference_automatic_location_sharing_summary">Periodically share your location automatically</string>
    <string name="preference_limit_location_sharing_time_title">Limit Location Sharing by Time</string>
    <string name="preference_limit_location_sharing_time_summary">Share your location only at certain times of the day</string>
    <string name="preference_limit_location_sharing_time_not_before_title">Not before</string>
    <string name="preference_limit_location_sharing_time_not_before_summary">Do not share location before this time</string>
    <string name="preference_limit_location_sharing_time_not_after_title">Not after</string>
    <string name="preference_limit_location_sharing_time_not_after_summary">Do not share location after this time</string>
    <string name="preference_limit_location_sharing_day_title">Limit Location Sharing by Day</string>
    <string name="preference_limit_location_sharing_day_summary">Share your location only on certain days of the week</string>
    <string name="preference_performance_title">Performance</string>
    <string name="preference_use_mobile_data_title">Use Mobile Data</string>
    <string name="preference_use_mobile_data_summary">Send your location and receive friend locations while using mobile data</string>
    <string name="preference_enable_battery_saver_title">Enable Battery Saver</string>
    <string name="preference_enable_battery_saver_summary">Stop sending your location and receiving friend locations when battery level is below threshold</string>
    <string name="preference_battery_saver_level_title">Battery Saver Level</string>
    <string name="preference_battery_saver_level_summary"></string>
    <string name="preferences_battery_saver_level_units">%%</string>
    <string name="preference_location_sharing_time_frequency_title">Location Sharing Time Frequency</string>
    <string name="preference_location_sharing_time_frequency_summary">How often your location is shared</string>
    <string name="preference_location_sharing_time_frequency_units">minutes</string>
    <string name="preference_location_sharing_distance_threshold_title">Location Sharing Distance Threshold</string>
    <string name="preference_location_sharing_distance_threshold_summary">How far you move before sharing a new location</string>
    <string name="preference_location_sharing_distance_threshold_units"> meters</string>
    <string name="preference_location_fix_period_title">Location Fix Period</string>
    <string name="preference_location_fix_period_summary">How long to run location services when obtaining a new location fix (longer period is more accurate but uses more battery)</string>
    <string name="preference_location_fix_period_units">seconds</string>
    <string-array name="weekday_names">
        <item>"Monday"</item>
        <item>"Tuesday"</item>
        <item>"Wednesday"</item>
        <item>"Thursday"</item>
        <item>"Friday"</item>
        <item>"Saturday"</item>
        <item>"Sunday"</item>
    </string-array>
</resources>
