<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ploggy="http://ploggy.psiphon.ca">

    <PreferenceCategory
        android:title="@string/preference_privacy_title"
        android:key="preferencesPrivacy">
        <CheckBoxPreference
            android:key="preferenceUseGeoCoder"
            android:title="@string/preference_use_geocoder_title"
            android:summary="@string/preference_use_geocoder_summary"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="preferenceLimitLocationPrecision"
            android:title="@string/preference_limit_location_precision_title"
            android:summary="@string/preference_limit_location_precision_summary"
            android:defaultValue="false" />
        <ca.psiphon.ploggy.widgets.SeekBarPreference
            android:key="preferenceLocationPrecision"
            android:dependency="preferenceLimitLocationPrecision"           
            android:title="@string/preference_location_precision_title"
            android:summary="@string/preference_location_precision_summary"
            ploggy:min="1"
            android:defaultValue="10"
            android:max="1000"
            ploggy:unitsLeft=""
            ploggy:unitsRight="@string/preference_location_precision_units"/>
        <CheckBoxPreference
            android:key="preferenceAutomaticLocationSharing"
            android:title="@string/preference_automatic_location_sharing_title"
            android:summary="@string/preference_automatic_location_sharing_summary"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="preferenceLimitLocationSharingTime"
            android:dependency="preferenceAutomaticLocationSharing"           
            android:title="@string/preference_limit_location_sharing_time_title"
            android:summary="@string/preference_limit_location_sharing_time_summary"
            android:defaultValue="false" />
        <ca.psiphon.ploggy.widgets.TimePickerPreference
            android:key="preferenceLimitLocationSharingTimeNotBefore"
            android:dependency="preferenceLimitLocationSharingTime"           
            android:title="@string/preference_limit_location_sharing_time_not_before_title"
            android:summary="@string/preference_limit_location_sharing_time_not_before_summary" />
        <ca.psiphon.ploggy.widgets.TimePickerPreference
            android:key="preferenceLimitLocationSharingTimeNotAfter"
            android:dependency="preferenceLimitLocationSharingTime"           
            android:title="@string/preference_limit_location_sharing_time_not_after_title"
            android:summary="@string/preference_limit_location_sharing_time_not_after_summary" />
        <MultiSelectListPreference
            android:key="preferenceLimitLocationSharingDay"
            android:dependency="preferenceAutomaticLocationSharing"           
            android:title="@string/preference_limit_location_sharing_day_title"
            android:summary="@string/preference_limit_location_sharing_day_summary"
            android:entries="@array/weekday_names"
            android:entryValues="@array/weekday_values"
            android:defaultValue="@array/weekday_values" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_performance_title"
        android:key="preferencesPerformance">
        <CheckBoxPreference
            android:key="preferenceUseMobileData"
            android:title="@string/preference_use_mobile_data_title"
            android:summary="@string/preference_use_mobile_data_summary"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="preferenceEnableBatterySaver"
            android:title="@string/preference_enable_battery_saver_title"
            android:summary="@string/preference_enable_battery_saver_summary"
            android:defaultValue="true" />
        <ca.psiphon.ploggy.widgets.SeekBarPreference
            android:key="preferenceBatterySaverLevel"
            android:dependency="preferenceEnableBatterySaver"           
            android:title="@string/preference_battery_saver_level_title"
            android:summary="@string/preference_battery_saver_level_summary"
            ploggy:min="0"
            android:defaultValue="15"
            android:max="100"
            ploggy:unitsLeft=""
            ploggy:unitsRight="@string/preferences_battery_saver_level_units"/>
        <ca.psiphon.ploggy.widgets.SeekBarPreference
            android:key="preferenceLocationUpdateTimePeriod"
            android:dependency="preferenceAutomaticLocationSharing"           
            android:title="@string/preference_location_sharing_time_frequency_title"
            android:summary="@string/preference_location_sharing_time_frequency_summary"
            ploggy:min="1"
            android:defaultValue="10"
            android:max="60"
            ploggy:unitsLeft=""
            ploggy:unitsRight="@string/preference_location_sharing_time_frequency_units"/>
        <ca.psiphon.ploggy.widgets.SeekBarPreference
            android:key="preferenceLocationSharingDistanceThreshold"
            android:dependency="preferenceAutomaticLocationSharing"           
            android:title="@string/preference_location_sharing_distance_threshold_title"
            android:summary="@string/preference_location_sharing_distance_threshold_summary"
            ploggy:min="1"
            android:defaultValue="10"
            android:max="100"
            ploggy:unitsLeft=""
            ploggyunitsRight="@string/preference_location_sharing_distance_threshold_units"/>
    </PreferenceCategory>

</PreferenceScreen>
